# my_project

./: .gitignore  customer_data.csv  generate_dataset.py  logger_helper.py  pipeline.py  pyproject.toml  test_script.py
